--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,4 +3,5 @@
   <app-forecast></app-forecast>
   <app-inbox></app-inbox>
   <app-projects></app-projects>
+  <pre>{{inboxItems$|async|json}}</pre>
 </mat-card>
