--- a/src/app/components/todo-entry/todo-entry.component.html
+++ b/src/app/components/todo-entry/todo-entry.component.html
@@ -32,8 +32,10 @@
     </mat-form-field>
   </div>
   <div>
+    <!--submit submits automatically because type = submit-->
     <button type="submit"
             mat-button>Add Item</button>
-    <button mat-button>Cancel</button>
+    <button mat-button
+            (click)="cancel()">Cancel</button>
   </div>
 </form>
