--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -3,8 +3,9 @@
   <mat-card-content>Inbox Items Have No Project or Due-Date Assigned</mat-card-content>
   <mat-card-actions>
     <button mat-button>
-      <mat-chip>
-        <mat-icon>inbox</mat-icon> (12)
+      <mat-chip [routerLink]="['']"
+                [queryParams]="{inbox: true}">
+        <mat-icon>inbox</mat-icon> ({{count$ | async}})
       </mat-chip>
     </button>
   </mat-card-actions>
