--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,1 +1,28 @@
-<p>list works!</p>
+<h3>Showing {{data.filter | titlecase}} {{data.id}}</h3>
+<div class="item-list">
+  <div class="list-headers">
+    <span>Name</span>
+    <span>Project</span>
+    <span>Due Date</span>
+    <span>Complete</span>
+  </div>
+  <div class="item"
+       *ngFor="let item of list$ | async">
+    <span>{{item.name}}</span>
+    <mat-divider></mat-divider>
+    <span>{{item.project || ' No Project'}}</span>
+    <span>{{(item.dueDate | date:'medium') || 'No Due Date'}}</span>
+    <button mat-button
+            (click)="markComplete(item)"
+            *ngIf="!item.completed">
+      <mat-icon>radio_button_unchecked</mat-icon>
+    </button>
+    <button mat-button
+            (click)="markIncomplete(item)"
+            *ngIf="item.completed">
+      <mat-icon>radio_button_checked</mat-icon>
+    </button>
+  </div>
+</div>
+<button mat-button
+        (click)="close()">Close</button>
