--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+pre {
+  font-size: 18pt;
+  color: green;
+  background-color: black;
+
+}
